# amice-axvm-ndk

./: README.md  protect-amice-ndk.ps1  protect-ndk.ps1
artifacts/: amice-axvm-test.apk
source/axvm-engine-integrated/: .gitignore  CMakeLists.txt  README.md
source/axvm-engine-integrated/android/: settings.gradle
source/axvm-engine-integrated/android/app/: build.gradle
source/axvm-engine-integrated/android/app/src/main/: AndroidManifest.xml
source/axvm-engine-integrated/android/app/src/main/cpp/: CMakeLists.txt  victim_jni.c
source/axvm-engine-integrated/android/app/src/main/java/com/axvm/demo/: ApkBinding.java  MainActivity.java  NativeVm.java  ProtectedSoLoader.java  VictimTest.java
source/axvm-engine-integrated/android/app/src/main/res/values/: themes.xml
source/axvm-engine-integrated/android/gradle/: axvm-protect.gradle
source/axvm-engine-integrated/cmake/: AxvmObfuscate.cmake  AxvmProtect.cmake  android-ndk.cmake  axvm_exports.map  axvm_exports_demo.map
source/axvm-engine-integrated/docs/: P1-FEATURES-AND-FIXES.md
source/axvm-engine-integrated/runtime/: CMakeLists.txt
source/axvm-engine-integrated/runtime/include/: axvm.h  axvm_asm_offsets.h  axvm_branch_map.h  axvm_bridge.h  axvm_bytecode.h  axvm_crypt.h  axvm_ctx.h  axvm_dispatch_perm.h  axvm_dynseed.h  axvm_engine.h  axvm_entropy.h  axvm_excl.h  axvm_freg.h  axvm_got_crypt.h  axvm_guard.h  axvm_guard_svc.h  axvm_handler_poly.h  axvm_hmac.h  axvm_integrity.h  axvm_interp.h  axvm_interp_selftest.h  axvm_jit.h  axvm_jit_emit.h  axvm_lazy.h  axvm_lazy_pf.h  axvm_log.h  axvm_mem_guard.h  axvm_nested.h  axvm_opcode_perm.h  axvm_pack.h  axvm_reg.h  axvm_riscc.h  axvm_stack_crypt.h  axvm_stext.h  axvm_strcrypt.h  axvm_types.h  axvm_watchdog.h
source/axvm-engine-integrated/runtime/src/: axvm_branch_map.c  axvm_bridge.c  axvm_bytecode.c  axvm_crypt.c  axvm_ctx.c  axvm_dispatch.c  axvm_dispatch_perm.c  axvm_dynseed.c  axvm_engine.c  axvm_entropy.c  axvm_entry.S  axvm_got_crypt.c  axvm_got_gate.S  axvm_guard.c  axvm_guard_svc.c  axvm_handler_poly.c  axvm_hmac.c  axvm_integrity.c  axvm_interp.c  axvm_interp_atomic.inc  axvm_interp_fp.inc  axvm_interp_insns.inc  axvm_interp_selftest.c  axvm_jit.c  axvm_jit_emit.c  axvm_lazy.c  axvm_lazy_pf.c  axvm_loader.c  axvm_mem_guard.c  axvm_native_call.S  axvm_nested.c  axvm_opcode_perm.c  axvm_riscc.c  axvm_stack_crypt.c  axvm_stext.c  axvm_strcrypt.c  axvm_watchdog.c
source/axvm-engine-integrated/samples/victim/: CMakeLists.txt  axvm_embed_init.c  victim.c  victim.h  victim_atomic.c  victim_float.c  victim_isa.c  victim_mixed.c  victim_neon.c
source/axvm-engine-integrated/scripts/: Wait-AxvmLogcat.ps1  bench-dispatch-compare.ps1  build-audit-verify.ps1  build-audit.ps1  build-axgate-axvm.ps1  build-axlift.sh  build-install-apk.ps1  build-modg.ps1  build-modh.ps1  build-modi.ps1  build-modj.ps1  build-modm.ps1  build-ndk.ps1  build-ndk.sh  build-protected-axvm.ps1  devtest-audit.ps1  install-android-sdk.ps1  install-jdk.ps1  protect-and-test-apk.ps1  protect-batch.ps1  push-test.ps1  push-test.sh  run-audit-apk.ps1  run-audit-pie.ps1  run-modg-pie.ps1  verify-all.ps1  verify-single-so.ps1
source/axvm-engine-integrated/shell/: CMakeLists.txt  README.md
source/axvm-engine-integrated/shell/host/: CMakeLists.txt  axgate_host.exports  axgate_host_jni.c
source/axvm-engine-integrated/shell/include/: axgate.h  axgate_aes.h  axgate_antidebug.h  axgate_axzc.h  axgate_elf.h  axgate_iat.h  axgate_integrity.h  axgate_kdf.h  axgate_mem.h  axgate_types.h
source/axvm-engine-integrated/shell/scripts/: axgate-inject.ps1
source/axvm-engine-integrated/shell/src/: axgate_aes.c  axgate_antidebug.c  axgate_axzc.c  axgate_boot.c  axgate_elf.c  axgate_entry.S  axgate_entry_fallback.c  axgate_iat.c  axgate_integrity.c  axgate_kdf.c  axgate_mem.c
source/axvm-engine-integrated/shell/tools/axgatepack/: axzc.go  go.mod  main.go
source/axvm-engine-integrated/tools/: apk_bind_host_test.c  dltest.c  gen_checksum.c  gen_strcrypt.c
source/axvm-engine-integrated/tools/axlift/: go.mod  main.go
source/axvm-engine-integrated/tools/axpack/: apk_bind.go  apk_bind_golden_test.go  apk_bind_test.go  apk_crypt_probe_test.go  apk_signing_test.go  atomic_detect.go  atomic_detect_test.go  axds_scan_diag_test.go  crypt_poly.go  crypt_poly_test.go  dump_stub_test.go  dynseed.go  dynseed_test.go  elf_dep.go  elf_dynsym_strip.go  elf_patch.go  elf_patch_bump_test.go  go.mod  inject_and_patch.go  integrity.go  junk_micro.go  junk_realign.go  lift.go  lift_a64.go  lift_bitfield.go  lift_branch.go  lift_branch_map.go  lift_extend.go  lift_extra.go  lift_failops_test.go  lift_fp.go  lift_fp_ret_test.go  lift_insn_test.go  lift_ldar_stlr_test.go  lift_logical_imm.go  lift_opc.go  lift_prevfail_fp_test.go  lift_prevfail_test.go  lift_realfp_test.go  lift_reloc.go  (+32 more)
